 * Added appendBlockFromURL method. A block may be created with another blob as its source.
 * Added uploadPagesFromURL method. Pages may be written to with another blob as their source.
 * Fixed a bug in which putBlockFromURI accessConditions were indicated as being on the destination when in actuality they only apply to the source.

2019.03.01 Version 8.1.0
 * Added support for the deep sync copy blob api.
 * Added the option to disable etag validation on BlobInputStream reads.
 * Added the ability to specify an offset and range on a BlobInputStream.

2018.06.26 Version 8.0.0
 * Support for 2018-03-28 REST version. Please see our REST API documentation and blogs for information about the related added features.
 * Added support for static website properties.
 * Added support for the getAccountInfo feature. Sku name and account kind may be retrieved using a CloudBlobClient, CloudBlobContainer, or CloudBlob with SharedKey or SAS.
 * Added support for putBlockFromURI. A block may be created with another block blob as its source.
 * Upgraded the language version to Java 7.
 * Updated the Jackson-Core dependency to version 2.9.4 to pull in security fix.

2018.05.22 Version 7.1.0
 * Support for 2017-11-09 REST version. Please see our REST API documentation and blogs for information about the related added features.
 * Added OAuth token support for authentication with HTTPS requests.
 * Support for write-once read-many containers.

2018.02.05 Version 7.0.0
 * Support for 2017-07-29 REST version. Please see our REST api documentation and blogs for information about the related added features.
 * Added support for soft delete feature. If a delete retention policy is enabled through the set service properties API, then blobs or snapshots can be deleted softly and retained for a specified number of days, before being permanently removed by garbage collection.